# sneck

./: .gitignore  Makefile  README.md  package.json  pyproject.toml
scripts/: main.py
src/sneck/: __main__.py  main.py
src/sneck/assets/: ascii_chars.py
src/sneck/classes/: app.py  board.py  display.py  game.py  input.py  logger.py  output.py  painter.py  palette.py  renderer.py  score_board_data.py  score_board_entry.py  screen.py  snake.py  state_manager.py  text.py  theme.py
src/sneck/classes/game_states/: __init__.py  game_over.py  playing.py  score_board.py  title_screen.py
src/sneck/classes/themes/: __init__.py  blood.py  custard.py  default.py  forest.py  monochrome.py  pink.py  space.py
src/sneck/enumerations/: __init__.py  colour.py  game_state.py  text_type.py
src/sneck/protocols/: game_context.py  game_state.py  state_manager_context.py  theme.py
src/sneck/tools/: painter.py
